# heimsight

./: .gitignore  CHANGELOG.md  CLAUDE_INSTRUCTIONS.md  Cargo.toml  DATABASE_EVALUATION.md  Makefile  PROJECT.md  README.md  docker-compose.yml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: config.rs  db.rs  lib.rs  main.rs  state.rs
api/src/grpc/: mod.rs  services.rs
api/src/metrics/: data_age.rs  mod.rs
api/src/routes/: aggregation.rs  health.rs  logs.rs  metrics.rs  mod.rs  otlp.rs  query.rs  retention.rs  traces.rs
api/tests/: integration_tests.rs
api/tests/integration_tests/: aggregation_tests.rs  grpc_tests.rs  health_tests.rs  logs_tests.rs  metrics_tests.rs  query_tests.rs  traces_tests.rs
api/tests/integration_tests/common/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: aggregation.http  config_retention.http  health.http  logs.http  metrics.http  otlp_logs.http  otlp_metrics.http  otlp_traces.http  query.http  traces.http
schema/: 00_functions.sql  01_logs.sql  02_metrics.sql  03_traces.sql  04_aggregations.sql  README.md  UPDATE_NORMALIZED_MESSAGE.md  test_normalization.sql
scripts/: test-normalization.sh  test-otlp.sh
shared/: Cargo.toml  build.rs
shared/proto/opentelemetry/proto/trace/v1/: trace.proto
shared/src/: lib.rs
shared/src/config/: aggregation.rs  mod.rs  retention.rs
shared/src/models/: log.rs  metric.rs  mod.rs  trace.rs
shared/src/otlp/: conversions.rs  conversions_test.rs  mod.rs
shared/src/query/: ast.rs  executor.rs  mod.rs  parser.rs
shared/src/storage/: log_store.rs  metric_store.rs  mod.rs  trace_store.rs
