[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Heimsight API server - Axum-based HTTP/gRPC server for observability data"

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
base64 = { workspace = true }
clickhouse = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
http-body-util = { workspace = true }
urlencoding = "2.1"
