[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Heimsight shared library - common types, models, and utilities"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
nom = "7.1"
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
hex = "0.4"
base64 = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
pbjson-build = "0.7"
