[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Heimsight shared library - common types, models, and utilities"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
nom = "8.0.0"
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = "0.14"
hex = "0.4.3"
base64 = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
clickhouse = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
pbjson-build = "0.9"
